// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should FavoritesPage render correctly Should FavoritesPage render correctly error 1`] = `
<main
  className="page__main page__main--favorites "
>
  <div
    className="container page__favorites-container "
  >
    <section
      className="favorites "
    >
      <h1
        className="favorites__title"
      >
        Saved listing
      </h1>
      <div
        style={
          Object {
            "alignItems": "center",
            "color": "#ff0000",
            "display": "flex",
            "flexDirection": "column",
            "justifyContent": "flex-start",
            "margin": "20px",
            "padding": "20px",
            "textAlign": "center",
            "width": "100%",
          }
        }
      >
        <h2
          style={
            Object {
              "fontSize": "24px",
              "fontStyle": "oblique",
              "fontWeight": 700,
              "lineHeight": 1.1667,
            }
          }
        >
          Error
        </h2>
        <p>
          Error loading data, try again later...
        </p>
      </div>
    </section>
  </div>
</main>
`;

exports[`Should FavoritesPage render correctly Should FavoritesPage render correctly loading 1`] = `
<main
  className="page__main page__main--favorites "
>
  <div
    className="container page__favorites-container "
  >
    <section
      className="favorites "
    >
      <h1
        className="favorites__title"
      >
        Saved listing
      </h1>
      <div
        style={
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "column",
            "fontSize": "38px",
            "fontStyle": "oblique",
            "fontWeight": 700,
            "justifyContent": "flex-start",
            "lineHeight": 0.7,
            "margin": "20px",
            "padding": "30px",
            "textAlign": "center",
            "width": "100%",
          }
        }
      >
        <h3
          style={
            Object {
              "alignItems": "center",
              "display": "flex",
              "justifyContent": "space-between",
            }
          }
        >
          <img
            alt="logo"
            height="50"
            src="/img/logo.svg"
            style={
              Object {
                "marginRight": "20px",
              }
            }
            width="100"
          />
          <svg
            height="100%"
            version="1.1"
            width="100%"
            xmlns="http://www.w3.org/2000/svg"
            xmlnsXlink="http://www.w3.org/1999/xlink"
          >
            <path
              id="path"
            >
              <animate
                attributeName="d"
                begin="0s"
                dur="3s"
                from="m0,110 h0"
                repeatCount="indefinite"
                to="m0,110 h1100"
              />
            </path>
            <text
              fill="black"
            >
              <textPath
                xlinkHref="#path"
              >
                Loading...
              </textPath>
            </text>
          </svg>
        </h3>
      </div>
    </section>
  </div>
</main>
`;

exports[`Should FavoritesPage render correctly Should FavoritesPage render correctly success with offers 1`] = `
<main
  className="page__main page__main--favorites "
>
  <div
    className="container page__favorites-container "
  >
    <section
      className="favorites "
    >
      <h1
        className="favorites__title"
      >
        Saved listing
      </h1>
      <div
        style={
          Object {
            "alignItems": "center",
            "color": "#ff0000",
            "display": "flex",
            "flexDirection": "column",
            "justifyContent": "flex-start",
            "margin": "20px",
            "padding": "20px",
            "textAlign": "center",
            "width": "100%",
          }
        }
      >
        <h2
          style={
            Object {
              "fontSize": "24px",
              "fontStyle": "oblique",
              "fontWeight": 700,
              "lineHeight": 1.1667,
            }
          }
        >
          Error
        </h2>
        <p>
          Error loading data, try again later...
        </p>
      </div>
    </section>
  </div>
</main>
`;
